Pipelines finally working, fixed minor issues, groq endpoint fixed